# interventional-reasoning-llms

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/tubingen/: tubingen_adv_data_0.csv  tubingen_adv_data_1.csv  tubingen_adv_data_2.csv  tubingen_cr_setup.md  tubingen_cs_data_0.csv  tubingen_cs_data_1.csv  tubingen_cs_data_2.csv  tubingen_pairs.csv  tubingen_pairs_complete.csv
experiments/templates/inter/: prompts_inter_cause_0.csv  prompts_inter_cause_1.csv  prompts_inter_cause_2.csv  prompts_inter_cause_3.csv  prompts_inter_change_0.csv  prompts_inter_change_1.csv  prompts_inter_change_2.csv  prompts_rchar_inter_edge_0.csv  prompts_rchar_inter_edge_1.csv  prompts_rchar_inter_edge_2.csv  prompts_rchar_inter_path_0.csv  prompts_rchar_inter_path_1.csv  prompts_rchar_inter_path_2.csv
experiments/templates/obs/: prompts_obs_cause_0.csv  prompts_obs_cause_1.csv  prompts_obs_cause_2.csv  prompts_obs_cause_3.csv  prompts_obs_change_0.csv  prompts_obs_change_1.csv  prompts_obs_change_2.csv  prompts_rchar_obs_edge_0.csv  prompts_rchar_obs_edge_1.csv  prompts_rchar_obs_edge_2.csv  prompts_rchar_obs_path_0.csv  prompts_rchar_obs_path_1.csv  prompts_rchar_obs_path_2.csv
experiments/templates/sub/: prompts_rchar_sub_edge_0.csv  prompts_rchar_sub_edge_1.csv  prompts_rchar_sub_edge_2.csv  (+10 more)
notebooks/: interventional.ipynb  llms.ipynb  playground.ipynb  plots.ipynb
scripts/: generate_prompts.py  plot_results.py  script.sh  separate_responses.py  submit_prompts.py
src/rbias/: __init__.py  constants.py  generation.py  process.py  query.py  utils.py
(+7 files in other folders)
